# hawktui

./: .gitignore  CMakeLists.txt
examples/: example1.c
include/: hawk_tui.h
include/core/: engine.h  input.h  render.h
include/utils/: color.h
include/widgets/: button.h
src/core/: engine.c  input.c  render.c
src/utils/: color.c
src/widgets/: button.c
